# astaRust

./: Cargo.toml  README
src/: main.rs
